--- a/.env.example
+++ b/.env.example
@@ -59,6 +59,7 @@ CHATBOT_DB_NAME=chatbot_db
 CHATBOT_DB_USER=chatbot_user
 CHATBOT_DB_PASSWORD=chatbot_password
 OPENAI_API_KEY=your_openai_api_key
+GROQ_API_KEY=your_groq_api_key
 
 # Inspection Service
 INSPECTION_SERVICE_PORT=8007
