--- a/services/chatbot-service/package.json
+++ b/services/chatbot-service/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
     "openai": "^4.20.1",
+    "groq-sdk": "^0.7.0",
     "amqplib": "^0.10.3",
     "winston": "^3.11.0"
   },
