--- a/services/payment-service/package.json
+++ b/services/payment-service/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "stripe": "^14.5.0",
     "amqplib": "^0.10.3",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
