--- a/services/scan-service/package.json
+++ b/services/scan-service/package.json
@@ -17,7 +17,11 @@
     "qrcode": "^1.5.3",
     "jsqr": "^1.4.0",
     "amqplib": "^0.10.3",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "sharp": "^0.33.0",
+    "tesseract.js": "^5.0.3",
+    "uuid": "^9.0.1",
+    "jimp": "^0.22.10"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
