Ajout du service Report complet avec génération PDF, emails, factures et menu déroulant navbar

--- a/.env.example
+++ b/.env.example
@@ -76,6 +76,15 @@ REPORT_DB_PORT=5432
 REPORT_DB_NAME=report_db
 REPORT_DB_USER=report_user
 REPORT_DB_PASSWORD=report_password
+# Email configuration (optional, uses test mode if not set)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password
+EMAIL_FROM="Auto Visite Tech <noreply@autovisitetech.fr>"
+API_URL=http://localhost:8008
+FRONTEND_URL=http://localhost:3000
 
 # RabbitMQ
 RABBITMQ_HOST=rabbitmq
